修改文件: _posts/2019-09-12-STM32F030 LL库使用笔记.md

--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -16,11 +16,19 @@ categories:  STM32
 
 总的来说：代码效率与移植性成反比的规律是明显的。与HAL相比，LL的效率优势很明显，几乎和直接写寄存器的效率相差无几。而且目前STM32cubeIDE已经支持直接生成LL工程，对于追求效率的开发应用人员来说，非常值得推荐大家使用。
 
+## STM32CubeIDE介绍
+
+官网地址：
+
+STM32CubeIDE是一个多功能的集成开发工具，集成了TrueSTUDIO和STM32CubeMX，它是STM32Cube软件生态系统的一部分。
+
+
 ## STM32cubeIDE新建工程
 
-新建工程有两种方法，如下图所示。第二种方法是在空项目情况下显示的快捷方式。
+新建工程有两种方法，如下图所示。方法2是在空项目情况下显示的快捷方式。
 
 ![新建工程](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库使用笔记/新建工程.png)
+
 
 
 ## 延时函数
