修改文件: _posts/2019-09-12-STM32F030 LL库使用笔记.md

--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -1,9 +1,14 @@
 ---
 layout: post
-title: "STM32F030 LL库使用笔记"
+title: "STM32F030 LL库使用笔记-STM32CubeIDE使用"
 data: 2019-9-12 16:23
 categories:  STM32
 ---
+
+>本文作者： LonlyPan
+>本文链接： http://www.strongerhuang.com/STM32Cube/STM32CubeMX/STM32CubeMX系列教程03_创建并生成代码工程.html
+>版权声明： 本文遵循 [署名-非商业性使用-禁止演绎 4.0 国际](https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh) 协议。禁止用于商业用途，转载联系作者授权！
+
 ## 为什么用LL库
 
 标准库官方已经不更新了，虽然资料很多，所以不再使用。之后学习使用了HAL库，但最近做项目需要使用16和32KB的STM32F0芯片，使用HAL库新建个工程再加上串口，基本就是10KB+了，所以也是被迫重新选择了LL库。
@@ -20,7 +25,7 @@ categories:  STM32
 
 官网地址：
 
-STM32CubeIDE是一个多功能的集成开发工具，集成了TrueSTUDIO和STM32CubeMX，它是STM32Cube软件生态系统的一部分。
+STM32CubeIDE是一个多功能的集成开发工具，集成了TrueSTUDIO和STM32CubeMX，它是STM32Cube软件生态系统的一部分。简单来说就是：**STM32cubeIDE = true studio for stm32 + STM32cubeMX**
 
 
 ## STM32cubeIDE新建工程
