修改文件: _posts/2019-09-12-STM32F030 LL库使用笔记.md

--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -26,10 +26,11 @@ categories:  STM32
 
 ## STM32CubeIDE介绍
 
-官网地址：
+官网地址：[STM32CubeIDE官网](https://www.stmicroelectronics.com.cn/en/development-tools/stm32cubeide.html)
 
 STM32CubeIDE是一个多功能的集成开发工具，集成了TrueSTUDIO和STM32CubeMX，它是STM32Cube软件生态系统的一部分。简单来说就是：**STM32cubeIDE = true studio for stm32 + STM32cubeMX**
 
+![STM32CubeIDE](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库笔记-STM32CubeIDE使用/en.STM32CubeIDE.jpg)
 
 ## STM32cubeIDE新建工程
 
