--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -12,7 +12,7 @@ categories:  STM32
 
 ----------
 
-## 为什么用LL库
+## 1、为什么用LL库
 
 标准库官方已经不更新了，虽然资料很多，所以不再使用。之后学习使用了HAL库，但最近做项目需要使用16和32KB的STM32F0芯片，使用HAL库新建个工程再加上串口，基本就是10KB+了，所以也是被迫重新选择了LL库。
 
@@ -24,7 +24,7 @@ categories:  STM32
 
 总的来说：代码效率与移植性成反比的规律是明显的。与HAL相比，LL的效率优势很明显，几乎和直接写寄存器的效率相差无几。而且目前STM32cubeIDE已经支持直接生成LL工程，对于追求效率的开发应用人员来说，非常值得推荐大家使用。
 
-## STM32CubeIDE介绍
+## 2、STM32CubeIDE介绍
 
 官网地址：[STM32CubeIDE官网](https://www.stmicroelectronics.com.cn/en/development-tools/stm32cubeide.html)
 
@@ -32,14 +32,56 @@ STM32CubeIDE是一个多功能的集成开发工具，集成了TrueSTUDIO和STM3
 
 ![STM32CubeIDE](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库笔记-STM32CubeIDE使用/en.STM32CubeIDE.jpg)
 
-## STM32cubeIDE新建工程
+STM32CubeIDE是一个先进的C/C++开发平台，具有STM32微控制器的IP配置，代码生成，代码编译和调试功能。
+
+从选择的电路板中选择空的STM32 MCU或预配置的微控制器后，将创建项目并生成初始化代码。在开发期间的任何时候，用户可以返回到IP或中间件的初始化和配置，并重新生成初始化代码而不影响用户代码。
+
+STM32CubeIDE包括构建和堆栈分析器，为用户提供有关项目状态和内存要求的有用信息。
+STM32CubeIDE还包括标准和高级调试功能，包括CPU内核寄存器，存储器和外设寄存器的视图，以及实时可变监视，串行线查看器接口或故障分析器。
+
+主要特点：
+
+**1. 集成STM32CubeMX，提供以下服务：**
+   - STM32微控制器选择 
+   - 引脚分配，时钟，IP和中间件配置 
+   - 项目创建和初始化代码的生成
+
+**2. 基于Eclipse™/ CDT，支撑ECLIPSE的™插件，GNU C / C ++中ARM ®工具链和GDB调试器。**
+
+**3. 其他高级调试功能包括：**
+   - CPU内核，IP寄存器和内存视图
+   - 实时变量观看视图
+   - 系统分析和实时跟踪（SWV）
+   - CPU故障分析工具
+
+**4. 支持ST-LINK（STMicroelectronics）和J-Link（SEGGER）调试探针**   
+
+**5. 从Atollic导入项目® TrueSTUDIO ®和AC6系统工作台的STM32**  
+
+**6. 多支持操作系统：Windows ®，Linux的®和MacOS ®**
+
+## 3、STM32cubeIDE下载安装
+
+### 3.1 下载
+官网下载地址： https://www.st.com/en/development-tools/stm32cubeide.html
+在页面底部找到下图，根据自己电脑操作系统下载即可，这里以Windows版为例。  右边下拉菜单还可以选择其他版本，推荐下载最新版。
+软件是免费的， 但下载时需要填写信息或者注册。  
+
+![软件下载](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库笔记-STM32CubeIDE使用/软件下载.png)
+
+### 3.2 安装
+
+
+## 4、STM32cubeIDE新建工程
 
 新建工程有两种方法，如下图所示。方法2是在空项目情况下显示的快捷方式。
 
 ![新建工程](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库使用笔记/新建工程.png)
 
-
-
+https://blog.csdn.net/ybhuangfugui/article/details/89702356
+https://www.strongerhuang.com/STM32Cube/STM32CubeMX/STM32CubeMX%E7%B3%BB%E5%88%97%E6%95%99%E7%A8%8B03_%E5%88%9B%E5%BB%BA%E5%B9%B6%E7%94%9F%E6%88%90%E4%BB%A3%E7%A0%81%E5%B7%A5%E7%A8%8B.html
+https://www.strongerhuang.com/STM32Cube/STM32CubeMX/STM32CubeMX%E7%B3%BB%E5%88%97%E6%95%99%E7%A8%8B04_STM32CubeMX%E5%90%84%E7%AA%97%E5%8F%A3%E7%95%8C%E9%9D%A2%E6%8F%8F%E8%BF%B0.html
+https://mp.weixin.qq.com/s?__biz=MzI4MDI4MDE5Ng==&mid=2247487135&idx=1&sn=befcd8aebe94c426181abc9a7eb49e63&chksm=ebbba374dccc2a62fbe758c656934d1f1b06b7427882ae5129f7afa1358d53674b66272c9dc7&mpshare=1&scene=21&srcid=&pass_ticket=mvZaxV8CBTwbJX1f8lVxdiRrDi5JMpgiXuPADHqY00AUxNhXi3wYjaFt8YuwpuWO#wechat_redirect
 ## 延时函数
 
 示例：
