修改文件: _posts/2019-05-22-初识C语言.md

--- a/_posts/2019-05-22-初识C语言.md
+++ b/_posts/2019-05-22-初识C语言.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "2019-05-22-初识C语言&C概述"
+title:  "初识C语言&C概述"
 date:   2019-05-22 22:23:32
 categories: C&C++
 ---
@@ -148,6 +148,6 @@ double  register  unsigned  ***_Noreturn***
 else  restrict  void  ***_Static_assert***
 **enum**  return  **volatile**  ***_Thread_local***
 
-https://segmentfault.com/a/1190000015699060
-https://github.com/qyuhen/book
+
+
 
