--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -2,7 +2,7 @@
 layout: post
 title: "小书匠语法使用手册"
 data: 2019-9-12 16:23
-categories:  STM32
+categories:  办公
 
 grammar_abbr: true
 grammar_table: true
