修改文件: _posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md

--- a/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
+++ b/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
@@ -10,11 +10,9 @@ categories: 随笔
 作者：曹天元
 
 ----------
-下文中：“<i class="far fa-square"></i>”表示摘抄，“<i class="far fa-star"></i>”表示笔记
 
-
- <i class="far fa-square"></i>：1887年，赫兹的实验证实了电磁波的存在，也证实了光其实是电磁波的一种，两者具有共同的波的特性。  
-<i class="fas fa-star"></i>：光属于电磁波?
+▢：1887年，赫兹的实验证实了电磁波的存在，也证实了光其实是电磁波的一种，两者具有共同的波的特性。  
+☆l：光属于电磁波?
 
 
 
