修改文件: _posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md

--- a/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
+++ b/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
@@ -5,14 +5,14 @@ date:   2019-10-15  22:18
 categories: 随笔
 ---
 
-日期：2019.07.16~07.27
-书名：上帝掷骰子吗:量子物理史话
-作者：曹天元
+日期：2019.07.16~07.27  
+书名：上帝掷骰子吗:量子物理史话  
+作者：曹天元  
 
 ----------
 
-▢：1887年，赫兹的实验证实了电磁波的存在，也证实了光其实是电磁波的一种，两者具有共同的波的特性。  
-☆：光属于电磁波?
+摘：1887年，赫兹的实验证实了电磁波的存在，也证实了光其实是电磁波的一种，两者具有共同的波的特性。  
+评：光属于电磁波?
 
 
 
