修改文件: _posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md

--- a/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
+++ b/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
@@ -20,4 +20,13 @@ categories: 随笔
 
 ----------
 
-普朗克方程
+摘：必须假定，能量在发射和吸收的时候，不是连续不断，而是分成一份一份的。
+评：“它和有史以来一切物理学家的观念截然相反。”，即认为一切自然的过程都被当成连续的。“这种连续性，平滑性的假设，是微积分的根本基础”。但普朗克认为能量的传输是有一个最小的基本单位，最小单位间是能量分禁区，只能按倍数传递。该最小单位称为“量子”。
+
+----------
+
+摘：量子就是能量的最小单位，就是能量里的一美分，一切能量的传输，都只能以这个量为单位来进行。E=hv。E为单个量子的能量，v是频率，h则为量子常数即普朗克常数。
+评：1900年2月14日，量子诞生。
+
+摘：“普朗克常数”。它约等于6.626×10-27尔格•秒，也就是6.626×10-34焦耳•秒。
+评：和引力常数G、光速c构成最为重要的3个基本物理常数。量子约为6.6\*10^-19^
