修改文件: _posts/2019-11-03-深海迷航攻略.md

--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -2,7 +2,7 @@
 layout: post
 title:    "2019-11-3-深海迷航攻略"
 date:   2019-11-3  17:12 
-categories: HTML&CSS
+categories: 随笔
 ---
 
 海蛾号小潜艇，初造200水压深，初步升级300，最深900
