--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -21,3 +21,5 @@ categories: 随笔
 如果非常缺乏资源，1寻找巨大珊瑚管，整个世界好像就3处，2海底沙漠，常见矿物很多（没有稀有矿，小心骨鲨）（稀有矿物去恶魔岛水下山壁，1200米深的熔岩山丘寻找）3，大堡礁地区200米到300米深，寻找踏浪者，它每走一步路就会凸起一个矿石，但是如果不拿矿石会再次沉下去消失。（boss踏浪者没有直接敌意属于中立生物，虽然移动非常慢，但是被踩到就直接丧生。）
 ![游戏地图](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/a6e9efda81cb39db7f0a9d90da160924a91830d8.jpg)
 
+![失落之河](undefined)
+
