修改文件: _posts/2019-11-15-Youtube无字幕视频翻译.md

--- a/_posts/2019-11-15-Youtube无字幕视频翻译.md
+++ b/_posts/2019-11-15-Youtube无字幕视频翻译.md
@@ -28,3 +28,6 @@ https://arctime.org/
 5、最近要翻译的视频
 https://www.youtube.com/watch?v=8HNG8EnAjfw&list=PL9B4edd-p2ajbkbFpi47P9PfMtQuV0OwQ
 https://www.youtube.com/watch?v=9W7tPUkaUZ0&list=PL9B4edd-p2ajRbjkjMuTt8lz_VeE8IKva
+
+6、这里还有个高级操作，需要编程知识和钻研精神
+https://github.com/BingLingGroup/autosub/blob/dev/docs/README.zh-Hans.md
