修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -11,8 +11,8 @@ categories:  C&C++
 * 在首次使用前初始化变量
 * unix like风格，单词小写，用下划线连接，
 * 建议使用"/*...*/"进行注释，多行单行都适用
-* 全局变量应增加”g_“前缀，静态增加”s_“前缀，类型名加前缀”P_“，全大写，下划线连接
-* 数值和字符串等等常量的定义，建议采用全大写字母，使用下划线”_“连接
+* 全局变量应增加”g_“前缀；静态增加”s_“前缀；类型名加前缀”P_“，全大写
+* 数值和字符串等等常量的定义，建议采用全大写字母，使用下划线”\_“连接
 * 定义函数时左花括号”{“单独占一行，其他的`if`、`while`、`for`等语句建议紧随其后
 * 组成switch、while、do...while 或for 结构体的语句应该是复合语句。即使该复合语句只包含一条语句也要扩在{}里
 * const、virtual、inline、case 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号‘（’，以与关键字区别
@@ -27,6 +27,8 @@ categories:  C&C++
 
 ## 目录结构
 **建议将工程按照功能模块划分子目录（lcdmenu，usart，motor......），子目录再定义头文件和源文件目录**
+
+
 
 ## 排版格式
 * 程序块采用缩进风格编写，**每级缩进为4格空格,不要使用tab键**
@@ -79,22 +81,57 @@ categories:  C&C++
 * **unix like风格，单词小写，用下划线连接，例如：text_mutex。全局变量大小写混合方式，例如：GetErrMsg**
 * 不使用缩写和汉语拼音
 * 避免名字中出现数字编号
-* 标识符前不应添加模块、项目、产品、部门的名称作为前缀
-* **全局变量应增加”g_“前缀，静态增加”s_“前缀**
-* 类型名加前缀”P_“，全大写，下划线连接
-* 禁止单字节变量，除局部循环使用
 * 不建议使用匈牙利命名法
-* **数值和字符串等等常量的定义，建议采用全大写字母，使用下划线”_“连接**
-* **除了头文件或编译开关等特殊表示定义，宏定义不能使用下划线”_“开头和结尾**
+* 标识符前不应添加模块、项目、产品、部门的名称作为前缀
+* 类型名加前缀”P_“，全大写，下划线连接
 
-## 宏、常量
-* **宏定义表达式时，使用完备的括号**
-* 将宏定义的多条表达式放在大括号中
-* **不允许直接使用魔鬼数字**
+
+## 常量
+- 函数和变量使用所有大写字母命名：[A-Z]和[0-9]
+- 下划线“ \_”用于将函数和变量名称拆分为更多逻辑组
+- 由表达式构成的常量必须在整个表达式周围带有花括号； 单值常量忽略该条
+- 必须始终定义和使用常量，而不要使用代码中的“ magic numbers”
+- 无符号整数常量（包括十六进制值）的定义必须使用 ‘u’ 后缀 
+- 对于十六进制值，请使用大写字母A-F 
+- 规则也适用于枚举，因为它们也是常量
+- 不要在常量定义中包括强制类型转换类型 
+
+**举例：**
+
+```c 
+#define BUFFER_SIZE 512 
+#define NUM_X_PINS (24u) 
+#define XEDGEGRADIENT_MASK (0x3Fu) 
+#define NUM_MATRIX_PINS (NUM_X_PINS + NUM_Y_PINS)
+enum buffer_size = {
+          BUFFER_SIZE_A = 128, 
+          BUFFER_SIZE_B = 512, 
+};
+```
+
+## 宏
+* 所有的宏参数以及宏定义本身都必须用括号括起来 
+* **除了头文件或编译开关等特殊表示定义，宏定义不能使用下划线”_“开头和结尾**
 * 除非必要，应尽可能使用函数代替宏,除了do-while 结构
 * **常量建议使用const代替宏**
+* 像宏这样的函数遵循与函数和变量相同的命名规则。 这样，在以后的阶段就更容易将它们交换为内联函数
+* 像宏之类的函数绝不能多次访问其参数 
+* 如果可能，应避免使用类似宏的函数，而应使用静态内联函数
+* 函数宏不得从其 “宿主” 调用函数中引用局部变量，而可以使用全局变量或传递给它们的参数
+
+**举例：**
+
+```c 
+#define set_io(id) do {              \ 
+           PORTA |= (1 << (id));     \ 
+} while (0)
+```
 
 ## 变量
+- 函数和变量使用所有小写字母命名：[a-z]和[0-9]
+- 下划线“ \_”用于将函数和变量名称拆分为更多逻辑组
+- 禁止单字节变量，除局部循环使用
+-  **全局变量应增加”g_“前缀，静态增加”s_“前缀**
 * **一个变量只有一个功能，不要把一个变量用作多种用途**
 * 防止局部变量和全局变量同名
 * **不用或者少用全局变量**
@@ -105,7 +142,47 @@ categories:  C&C++
 * **尽量减少没有必要的数据类型默认转换与强制转换**
 * **避免使用 BOOL 参数和NULL**
 
+**举例：**
+
+```c 
+void this_is_a_function_prototype(void);
+```
+
+## 全局变量
+
+- 全局变量应增加”g_“前缀
+- 全局变量要有较详细的注释，包括对其功能、取值范围、哪些函数或过程存取它以及
+存取时注意事项等的说明。
+
+**举例：**
+
+```c 
+/* @brif The ErrorCode when SCCP translate */
+/* @value Global Title failure, as follows */ // 变量作用、含义
+/* 0 － SUCCESS 1 － GT Table error */
+/* 2 － GT error Others － no use */ // 变量取值范围
+/* only function SCCPTranslate() in */
+/* this modual can modify it, and other */
+/* module can visit it through call */
+/* the function GetGTTransErrorCode() */ // 使用方法
+BYTE g_GTTranErrorCode;
+```
+
+## 类型定义
+- 如果可用，必须使用stdint.h和stdbool.h类型 
+- 类型定义使用所有小写字母命名：[a-z]和[0-9] 
+- 下划线“ \_”用于将函数和变量名称拆分为更多逻辑组
+- 类型名加前缀”p_“
+
+**举例：**
+
+```c 
+typedef uint8_t p_buffer_item;
+```
+
 ## 函数
+- 函数和变量使用所有小写字母命名：[a-z]和[0-9]
+- 下划线“ \_”用于将函数和变量名称拆分为更多逻辑组
 * **重复代码应该尽可能提炼成函数**
 * 避免函数过长，**新增函数不超过40-50行**
 * 避免函数的代码块嵌套过深
@@ -119,6 +196,12 @@ categories:  C&C++
 * 用正确的反义词组命名具有互斥意义的变量或相反动作的函数等
 * 在多重循环中，应将最忙的循环放在最内层
 * **函数名大写开头**
+
+**举例：**
+
+```c 
+void this_is_a_function_prototype(void);
+```
 
 ## 可移植性
 * 不使用与硬件或操作系统关系很大的语句，而使用建议的标准语句，以提高软件的可移植性和可重用性
@@ -138,22 +221,7 @@ categories:  C&C++
 @see               表示交叉参考
 ```
 
-### 全局变量
 
-全局变量要有较详细的注释，包括对其功能、取值范围、哪些函数或过程存取它以及
-存取时注意事项等的说明。
-
-```c 
-/* @brif The ErrorCode when SCCP translate */
-/* @value Global Title failure, as follows */ // 变量作用、含义
-/* 0 － SUCCESS 1 － GT Table error */
-/* 2 － GT error Others － no use */ // 变量取值范围
-/* only function SCCPTranslate() in */
-/* this modual can modify it, and other */
-/* module can visit it through call */
-/* the function GetGTTransErrorCode() */ // 使用方法
-BYTE g_GTTranErrorCode;
-```
 
 ### 常见单词缩写表
 
