--- a/_posts/2019-11-19-J-Link SWD下载错误.md
+++ b/_posts/2019-11-19-J-Link SWD下载错误.md
@@ -2,7 +2,7 @@
 layout: post
 title: "2019-11-19-J-Link SWD下载错误"
 data: 2019-11-19 15:21
-categories:  HARDWARE
+categories:  hardware
 ---
 ## 测试环境
 
