修改文件: _posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md

--- a/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
+++ b/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
@@ -28,7 +28,11 @@ categories: 随笔
 ----------
 
 **摘：** 量子就是能量的最小单位，就是能量里的一美分，一切能量的传输，都只能以这个量为单位来进行。E=hv。E为单个量子的能量，v是频率，h则为量子常数即普朗克常数。
-评：1900年2月14日，量子诞生。
-**摘：**“ 普朗克常数”。它约等于6.626×10-27尔格•秒，也就是6.626×10-34焦耳•秒。
+
+**评：** 1900年2月14日，量子诞生。
+
+----------
+
+**摘：**“ 普朗克常数”。约等于6.626×10-27尔格•秒，也就是6.626×10-34焦耳•秒。 
 
 **评：** 普朗克常数和引力常数G、光速c构成最为重要的3个基本物理常数。量子约为6.6\*10^-19^
