--- a/_posts/2019-11-19-J-Link SWD下载错误.md
+++ b/_posts/2019-11-19-J-Link SWD下载错误.md
@@ -17,6 +17,8 @@ J-Link：淘宝购买的J-Link V9.5（非官方）
 
 **错误1：**
 
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/J-Link_SWD下载错误/unsecured.png)
+
 ```
 Secured Atmel SAMD device detected.
 For debugger connection the device needs to be unsecured.
@@ -29,6 +31,7 @@ Note: Unsecuring will trigger a mass erase of the internal flash.
 
 **错误2：**
 
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/J-Link_SWD下载错误/error_connect.png)
 ```
 Failed to launch program
 Error:Error connecting to device over SWD
@@ -39,6 +42,7 @@ Error:Error connecting to device over SWD
 
 **错误3：**
 
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/J-Link_SWD下载错误/unexpected_chip.png)
 ```
 Failed to launch program
 Error:Unexpected Chip Identifier 0x23000042（expected 0x61840300）
@@ -58,3 +62,7 @@ Error:Unexpected Chip Identifier 0x23000042（expected 0x61840300）
 **解决方法：**
 - 更换杜邦线，选择接头紧的，不要出现松动
 - 降低下载速率，1MHz以下
+
+## 错误补充
+
+1. 一个程序两次下载，一次正常，一次死机，死机时：Debug发现系统执行直接报错。此时重新插拔J-Link，重新下载，问题解决，也是无语。。。
