修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -33,7 +33,9 @@ grammar_cjkRuby: true
 grammar_center: true
 grammar_align: true
 grammar_tableExtra: true
----
+--- 
+
+[toc!?theme=gray&depth=4]
 
 # 常用语法
 
@@ -819,3 +821,4 @@ Content Cell  | Content Cell| Content Cell|
 表身2Content Cell  | Merge Content Cell||
 Content Cell  | Content Cell| Content Cell|
 [表格标题]
+
