--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -37,17 +37,151 @@ grammar_tableExtra: true
 
 [toc!?theme=gray&depth=4]
 
+# 已知不适配语法
+不适配是指：在小书匠软件上可以正常使用，但发布到该博客上无法正常显示，该博客基于Jekyll & Markdown。
+
+## 思维导图大纲
+
+
 # 常用语法
 
+## 斜体
+
+### 使用
+
+对需要斜体的文字使用一个 * 或者 _ 符号包裹，系统就会转换成斜体显示效果
+
+示例：
+多种写法，效果相同
+```markdown
+1、
+*斜体文字* 
+2、
+_斜体文字_ 
+```
+### 效果
+*斜体文字* 
+
+
+## 粗体
+
+对需要加粗的文字使用两个 * 或者 _ 符号包裹，系统就会转换成加粗显示效果
+
+### 使用
+
+示例：
+多种写法，效果相同
+```markdown
+1、
+**加粗的文字** 
+2、
+__加粗的文字__ 
+```
+### 效果
+**加粗的文字** 
+
+## 图片
+
+### 使用
+
+示例：
+多种写法，效果相同
+```markdown
+1、
+![小书匠图片](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png) 
+2、链接辨别标签任意，但要全局唯一
+![小书匠图片][引用标号a] 
+ 
+[引用标号a]: http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png 
+```
+### 效果
+
+![小书匠图片](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png) 
+
+## 链接
+
+### 使用
+
+示例：
+多种写法，效果相同
+```markdown
+1、
+[小书匠官网](http://www.xiaoshujiang.com) 
+2、链接辨别标签任意，但要全局唯一，链接定义可以在任意位置，常见文末。
+[小书匠官网][a] 
+
+[a]: http://www.xiaoshujiang.com 
+```
+### 效果
+
+[小书匠官网](http://www.xiaoshujiang.com) 
+
+## 标题
+
+### 使用
+
+示例：
+多种写法，效果相同
+```markdown
+# 这里是一号标题 
+## 这里是二号标题 
+### 这里是三号标题 
+#### 这里是四号标题 
+##### 这里是五号标题 
+###### 这里是六号标题 
+```
+### 效果
+
+本文的章节标题
+
+## HTML
+
+想要使用该语法，需要在设置>扩展语法 里把HTML选项打开。系统默认打开HTML语法功能，实际测试关闭该功能软件仍会识别该语法
+
+### 使用
+
+示例：
+多种写法，效果相同
+```markdown
+<div class="hey">Hello world</div> 
+```
+### 效果
+
+<div class="hey">Hello world</div> 
+
+## 代码
+
+### 行内代码
+
+### 使用
+
+示例：
+多种写法，效果相同
+```markdown
+
+```
+### 效果
+
+
+## X体
+
+### 使用
+
+示例：
+多种写法，效果相同
+```markdown
+
+```
+### 效果
+
+
+
+只介绍基础用法，相同效果的多种用法或不同写法已酌情删减。
 ___
 
 ## 标题
 
 ```markdown
-这是 H1 一级标题
-======
-这是 H2 二级标题
-------
 # 这是 H1 一级标题
 ## 这是 H2 二级标题
 ### 这是 H3 三级标题
@@ -55,11 +189,19 @@ ___
 ##### 这是 H5 五级标题
 ###### 这是 H6 六级标题
 ```
-**快捷键**: [ctrl + h]
 
+### 示例
+
+# 这是 H1 一级标题
+## 这是 H2 二级标题
+### 这是 H3 三级标题
+#### 这是 H4 四级标题
+##### 这是 H5 五级标题
+###### 这是 H6 六级标题
 
 ## 列表
 ### 无序列表
+三种写法，显示效果相同
 ```markdown
 * 项目1
   * 子项目1.1
@@ -82,36 +224,61 @@ ___
 - 项目2
 - 项目3
 ```
-**快捷键**: [ctrl + u]
+### 示例
+
+* 项目1
+  * 子项目1.1
+  * 子项目1.2
+    * 子项目1.2.1
+* 项目2
+* 项目3
+
++ 项目1
+  + 子项目1.1
+  + 子项目1.2
+    + 子项目1.2.1
++ 项目2
++ 项目3
+
+- 项目1
+  - 子项目1.1
+  - 子项目1.2
+    - 子项目1.2.1
+- 项目2
+- 项目3
+
+
 ### 有序列表
+只有两级
 ```markdown
 1. 项目1
 2. 项目2
 3. 项目3
-    1. 项目3.1
-    2. 项目3.2
+    3.1. 子项目3.1
+    3.2. 子项目3.2
+```
+
+### 示例
 
 1. 项目1
-1. 项目2
-1. 项目3
-    1. 项目3.1
-    1. 项目3.2
-```
-### 有序列表起始编号
-```markdown
-58. 项目5
-2. 项目6
-```
-**快捷键**: [ctrl + o]
-
+2. 项目2
+3. 项目3
+    3.1. 项目3.1
+    3.2. 项目3.2
 
 ## 链接
+两种写法，效果相同。
 ```markdown
-[链接名称](链接地址)
+第一种：
+[链接名称](www.lonlypan.com)
+第二种：链接地址先以标号代替，最后再结尾统一将标号和地址对应；这样链接名找标号，标号再找链接地址。标号任意取，但要保持全局唯一。
+[链接名称][我的博客网址]
+[我的博客网址] : www.lonlypan.com
+```
+[链接名称](www.lonlypan.com)
+
 [链接名称][1]
 [1] : 链接地址
-```
-
 
 ## 图片
 ```markdown
