修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -47,11 +47,9 @@ grammar_tableExtra: true
 
 ## 斜体
 
-### 使用
-
 对需要斜体的文字使用一个 * 或者 _ 符号包裹，系统就会转换成斜体显示效果
 
-示例：
+### 示例：
 多种写法，效果相同
 ```markdown
 1、
@@ -67,9 +65,7 @@ _斜体文字_
 
 对需要加粗的文字使用两个 * 或者 _ 符号包裹，系统就会转换成加粗显示效果
 
-### 使用
-
-示例：
+### 示例：
 多种写法，效果相同
 ```markdown
 1、
@@ -82,9 +78,7 @@ __加粗的文字__
 
 ## 图片
 
-### 使用
-
-示例：
+### 示例：
 多种写法，效果相同
 ```markdown
 1、
@@ -100,9 +94,7 @@ __加粗的文字__
 
 ## 链接
 
-### 使用
-
-示例：
+### 示例：
 多种写法，效果相同
 ```markdown
 1、
@@ -118,9 +110,7 @@ __加粗的文字__
 
 ## 标题
 
-### 使用
-
-示例：
+### 示例：
 多种写法，效果相同
 ```markdown
 # 这里是一号标题 
@@ -138,9 +128,7 @@ __加粗的文字__
 
 想要使用该语法，需要在设置>扩展语法 里把HTML选项打开。系统默认打开HTML语法功能，实际测试关闭该功能软件仍会识别该语法
 
-### 使用
-
-示例：
+### 示例：
 多种写法，效果相同
 ```markdown
 <div class="hey">Hello world</div> 
@@ -152,22 +140,79 @@ __加粗的文字__
 ## 代码
 
 ### 行内代码
+通过 \` 符号在文字间标识成行内代码
 
-### 使用
+#### 示例
 
-示例：
 多种写法，效果相同
 ```markdown
-
+这是一段`行内代码`，穿插再行内之间 
 ```
-### 效果
+#### 效果
+这是一段`行内代码`，穿插再行内之间 
 
+### 块代码
 
+代码块通过4个空格显示
+
+#### 示例
+
+多种写法，效果相同
+```markdown
+	var x = 1; 
+	var y = 2; 
+	var z = 3; 
+```
+#### 效果
+	var x = 1; 
+	var y = 2; 
+	var z = 3; 
+
+### GFM 风格代码块语法
+
+通过连续\` 或者 ~ 三个以上的符号包裹的区间做为代码块，并可以指定需要高亮显示的语言。通过 GFM 风格显示的代码块，不再需要像普通代码块那样，每行都要空4个空格的要求。
+
+小书匠使用 [highlightjs](https://highlightjs.org/) 高亮语言插件，所以需要你的博客也安装了该插件，我的已经安装。基本支持所有的编程语言，
+
+#### 示例
+
+#### 示例
+
+多种写法，效果相同
+
+````markdown
+```c
+var a = "hello world";
+var b = "good luck";
+```
+````
+
+#### 效果
+
+```c
+var x = 1; 
+var y = 2; 
+var z = 3; 
+``` 
+
+代码块通过4个空格显示
+
+#### 示例
+
+多种写法，效果相同
+```markdown
+	var x = 1; 
+	var y = 2; 
+	var z = 3; 
+```
+#### 效果
+	var x = 1; 
+	var y = 2; 
+	var z = 3; 
+    
 ## X体
 
-### 使用
-
-示例：
+### 示例：
 多种写法，效果相同
 ```markdown
 
