修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -172,9 +172,7 @@ __加粗的文字__
 
 通过连续\` 或者 ~ 三个以上的符号包裹的区间做为代码块，并可以指定需要高亮显示的语言。通过 GFM 风格显示的代码块，不再需要像普通代码块那样，每行都要空4个空格的要求。
 
-小书匠使用 [highlightjs](https://highlightjs.org/) 高亮语言插件，所以需要你的博客也安装了该插件，我的已经安装。基本支持所有的编程语言，
-
-#### 示例
+小书匠使用 [highlightjs](https://highlightjs.org/) 高亮语言插件，所以需要你的博客也安装了该插件，我的已经安装，但和小书匠软件的高亮特性不一样，可能规则不同。基本支持所有的编程语言。
 
 #### 示例
 
@@ -188,27 +186,17 @@ var b = "good luck";
 ````
 
 #### 效果
-
+后面的 *c* 就是指定显示风格，也可留空
 ```c
-var x = 1; 
-var y = 2; 
-var z = 3; 
+var a = "hello world";
+var b = "good luck";
+```
+
+```c?title=带标题的代码块 
+var a = "hello world";
+var b = "good luck";
 ``` 
 
-代码块通过4个空格显示
-
-#### 示例
-
-多种写法，效果相同
-```markdown
-	var x = 1; 
-	var y = 2; 
-	var z = 3; 
-```
-#### 效果
-	var x = 1; 
-	var y = 2; 
-	var z = 3; 
     
 ## X体
 
