修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -197,6 +197,27 @@ var a = "hello world";
 var b = "good luck";
 ``` 
 
+```javascript?linenums=true 
+var x = 1; 
+var y = 2; 
+var z = 3; 
+``` 
+```javascript?linenums=5 
+var x = 1; 
+var y = 2; 
+var z = 3; 
+``` 
+
+```javascript?fancy=1,3,5-6&linenums 
+var x = 1; 
+var y = 2; 
+var z = 3;
+var a = 4; 
+var b = 5; 
+var c = 6; 
+var d = 7; 
+``` 
+
     
 ## X体
 
