修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -192,10 +192,11 @@ var a = "hello world";
 var b = "good luck";
 ```
 
-```c?title=带标题的代码
+```c?title=带标题的代码块
 var a = "hello world";
 var b = "good luck";
 ``` 
+---
 
 ```javascript?linenums=true 
 var x = 1; 
