--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -40,8 +40,8 @@ grammar_tableExtra: true
 # 已知不适配语法
 不适配是指：在小书匠软件上可以正常使用，但发布到该博客上无法正常显示，该博客基于Jekyll & Markdown。
 
-## 思维导图大纲
-
+思维导图大纲
+小书匠专用代码块高级语法
 
 # 常用语法
 
@@ -174,6 +174,9 @@ __加粗的文字__
 
 小书匠使用 [highlightjs](https://highlightjs.org/) 高亮语言插件，所以需要你的博客也安装了该插件，我的已经安装，但和小书匠软件的高亮特性不一样，可能规则不同。基本支持所有的编程语言。
 
+1.[highlightjs 官网](https://highlightjs.org/)
+2.[highlightjs 支持的高亮语言](https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html#language-names-and-aliases)
+
 #### 示例
 
 多种写法，效果相同
@@ -192,34 +195,40 @@ var a = "hello world";
 var b = "good luck";
 ```
 
-```c?title=带标题的代码块
-var a = "hello world";
-var b = "good luck";
-``` 
----
+### 代码块执行功能
 
-```javascript?linenums=true 
-var x = 1; 
-var y = 2; 
-var z = 3; 
-``` 
-```javascript?linenums=5 
-var x = 1; 
-var y = 2; 
-var z = 3; 
-``` 
+小书匠提供了部份代码执行功能，比如 flow, sequence, mermaid, plantuml 等，只要对相应的高亮标识语言后面添加上感叹号，系统会执行成相应的代码。具体使用可以查看相应的语法教程，同样需要你的博客安装了相应插件，目前本博客只安装了 **mathjax** 语法插件。
 
-```javascript?fancy=1,3,5-6&linenums 
-var x = 1; 
-var y = 2; 
-var z = 3;
-var a = 4; 
-var b = 5; 
-var c = 6; 
-var d = 7; 
-``` 
+ - flow 流程图语法
+ - sequence 图语法
+ - mermaid 图语法
+ - plantuml 语法
+ - mathjax 语法
+ - wadewom 语法
+ - xsjimg 语法
 
-    
+## 列表
+
+### 无序列表
+
+#### 示例：
+多种写法，效果相同
+```markdown
+
+```
+#### 效果
+
+### 有序列表
+
+
+#### 示例：
+多种写法，效果相同
+```markdown
+
+```
+#### 效果
+
+
 ## X体
 
 ### 示例：
