修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -207,28 +207,159 @@ var b = "good luck";
  - wadewom 语法
  - xsjimg 语法
 
-## 列表
 
-### 无序列表
+## 无序列表
 
-#### 示例：
+### 示例：
 多种写法，效果相同
 ```markdown
 
 ```
-#### 效果
+### 效果
 
-### 有序列表
+## 有序列表
 
+### 单级无序列表
+
+在每一个条目前面添加*, - 或者 + 符号，就可以实现无序列表
 
 #### 示例：
 多种写法，效果相同
 ```markdown
+1、
+ 无序条目 
+* 无序条目 
+* 无序条目 
+2、
+- 无序条目 
+- 无序条目 
+- 无序条目 
+3、
++ 无序条目 
++ 无序条目 
++ 无序条目 
+```
+#### 效果
+* 无序条目 
+* 无序条目 
+* 无序条目 
 
+### 多级嵌套无序列表
+通过间隔二个以上的空隔，可以实现多级嵌套无序列表功能。**‘+’ ‘-’ ‘\*’** 三种符号可混用，同样效果。
+
+#### 示例：
+多种写法，效果相同
+```markdown
++ 无序条目 
+	+ 子无序条目 
+	+ 子无序条目 
+		- 孙无序条目 
+		- 孙无序条目 
++ 无序条目 
+	* 子无序条目 
+	* 子无序条目 
++ 无序条目 
+```
+
+#### 效果
+
++ 无序条目 
+	+ 子无序条目 
+	+ 子无序条目 
+		- 孙无序条目 
+		- 孙无序条目 
++ 无序条目 
+	* 子无序条目 
+	* 子无序条目 
++ 无序条目 
+
+### 单条目多行
+
+对于段落，相邻行会默认并到上文最近的列表项目中，且自动缩进对齐，无需再手动对齐，若相隔一个空行，该特性消失。
+
+#### 示例：
+多种写法，效果相同
+
+```markdown
+1、第二行开始顶格写
+* Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+Aliquam hendrerit mi posuere lectus. Vestibulum enim wisi, 
+viverra nec, fringilla in, laoreet vitae, risus.
+2、第二行开始手工对齐
+* Donec sit amet nisl. Aliquam semper ipsum sit amet velit. 
+  Suspendisse id sem consectetuer libero luctus adipiscing.
 ```
 #### 效果
 
+* Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+Aliquam hendrerit mi posuere lectus. Vestibulum enim wisi, 
+viverra nec, fringilla in, laoreet vitae, risus.
+* Donec sit amet nisl. Aliquam semper ipsum sit amet velit. 
+  Suspendisse id sem consectetuer libero luctus adipiscing.
+  
+### 列表项目多段落
 
+列表项目可以包含多个段落，每个项目下的段落首行都必须缩进 4 个空格或是 1 个制表符
+
+#### 示例：
+多种写法，效果相同
+
+ ```markdown
+ 1、
+ * This is a list item with two paragraphs. Lorem ipsum dolor 
+  sit amet, consectetuer adipiscing elit. Aliquam hendrerit 
+  mi posuere lectus. 
+//  实测首行空三格就行
+   Vestibulum enim wisi, viverra nec, fringilla in, laoreet 
+   vitae, risus. Donec sit amet nisl. Aliquam semper ipsum 
+   sit amet velit. 
+ 
+* Suspendisse id sem consectetuer libero luctus adipiscing.
+
+2、
+* This is a list item with two paragraphs. 
+//  实测首行空两格就行
+   This is the second paragraph in the list item. You're 
+only required to indent the first line. Lorem ipsum dolor 
+sit amet, consectetuer adipiscing elit. 
+ 
+* Another item in the same list. 
+ ```
+ #### 效果
+ 
+  1、
+ * This is a list item with two paragraphs. Lorem ipsum dolor 
+  sit amet, consectetuer adipiscing elit. Aliquam hendrerit 
+  mi posuere lectus. 
+
+   Vestibulum enim wisi, viverra nec, fringilla in, laoreet 
+  vitae, risus. Donec sit amet nisl. Aliquam semper ipsum 
+  sit amet velit. 
+ 
+* Suspendisse id sem consectetuer libero luctus adipiscing.
+
+2、
+* This is a list item with two paragraphs. 
+
+  This is the second paragraph in the list item. You're 
+only required to indent the first line. Lorem ipsum dolor 
+sit amet, consectetuer adipiscing elit. 
+ 
+* Another item in the same list. 
+
+
+* A list item with a blockquote: 
+  > This is a blockquote 
+  > inside a list item. 
+
+* 一列表项包含一个列表区块： 
+    <代码写在这>
+    
+* 一列表项包含一个列表区块： 
+  ``` javascript 
+  var x = 1; 
+  ``` 
+  
 ## X体
 
 ### 示例：
