修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -323,7 +323,7 @@ sit amet, consectetuer adipiscing elit.
   sit amet, consectetuer adipiscing elit. Aliquam hendrerit 
   mi posuere lectus. 
 
-  Vestibulum enim wisi, viverra nec, fringilla in, laoreet 
+   Vestibulum enim wisi, viverra nec, fringilla in, laoreet 
   vitae, risus. Donec sit amet nisl. Aliquam semper ipsum 
   sit amet velit. 
  
@@ -338,18 +338,17 @@ sit amet, consectetuer adipiscing elit.
  
 * Another item in the same list. 
 
+### 列表和代码块
+如果要放代码区块的话，该区块就需要缩进缩进两次，也就是 8 个空格或是 2 个制表符：实测只需要缩进两格。
 
 * A list item with a blockquote: 
   > This is a blockquote 
   > inside a list item. 
 
 * 一列表项包含一个列表区块： 
-     <代码写在这>
-    
-* 一列表项包含一个列表区块： 
-   ``` javascript 
+  ``` javascript 
    var x = 1; 
-   ``` 
+  ``` 
 
 
 ## 有序列表
