--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -3,36 +3,6 @@ layout: post
 title: "小书匠语法使用手册"
 data: 2019-9-12 16:23
 categories:  办公
-
-grammar_abbr: true
-grammar_table: true
-grammar_defList: true
-grammar_emoji: true
-grammar_footnote: true
-grammar_ins: true
-grammar_mark: true
-grammar_sub: true
-grammar_sup: true
-grammar_checkbox: true
-grammar_mathjax: true
-grammar_flow: true
-grammar_sequence: true
-grammar_plot: true
-grammar_code: true
-grammar_highlight: true
-grammar_html: true
-grammar_linkify: true
-grammar_typographer: true
-grammar_video: true
-grammar_audio: true
-grammar_attachment: true
-grammar_mermaid: true
-grammar_classy: true
-grammar_cjkEmphasis: true
-grammar_cjkRuby: true
-grammar_center: true
-grammar_align: true
-grammar_tableExtra: true
 --- 
 
 [toc!?theme=gray&depth=4]
@@ -126,7 +96,7 @@ __加粗的文字__
 
 ## HTML
 
-想要使用该语法，需要在设置>扩展语法 里把HTML选项打开。系统默认打开HTML语法功能，实际测试关闭该功能软件仍会识别该语法
+想要使用该语法，需要在设置>扩展语法 里把HTML选项打开。系统默认打开HTML语法功能。
 
 ### 示例：
 多种写法，效果相同
