修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -308,18 +308,42 @@ sit amet, consectetuer adipiscing elit.
  
 * Another item in the same list. 
 
-### 列表和代码块
-如果要放代码区块的话，该区块就需要缩进缩进两次，也就是 8 个空格或是 2 个制表符：实测只需要缩进两格。
+### 列表和引用
 
-* A list item with a blockquote: 
+如果要在列表项目内放进引用，那 > 就需要缩进两格
+
+#### 示例：
+
+````markdown
+* 一列表项包含一个列表区块： 
   > This is a blockquote 
   > inside a list item. 
+  ````
+  
+#### 效果
 
 * 一列表项包含一个列表区块： 
-  ``` javascript 
+  > This is a blockquote 
+  > inside a list item. 
+  
+### 列表和代码块
+如果要放代码区块的话，该区块就需要缩进缩进两次，也就是 8 个空格或是 2 个制表符：实测只需要缩进两格。  
+
+#### 示例：
+
+````markdown
+* 一列表项包含一个列表区块： 
+  ``` c
    var x = 1; 
   ``` 
+  ````
+  #### 效果
+  
 
+* 一列表项包含一个列表区块： 
+  ``` c 
+   var x = 1; 
+  ``` 
 
 ## 有序列表
 
