修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -347,6 +347,86 @@ sit amet, consectetuer adipiscing elit.
 
 ## 有序列表
 
+### 默认有序列表
+
+直接在每个条目上进行数值编号
+
+#### 示例：
+多种写法，效果相同
+```markdown
+1. 条目一 
+2. 条目二 
+3. 条目三 
+```
+#### 效果
+
+注意显示效果为每列有缩进
+1. 条目一 
+2. 条目二 
+3. 条目三 
+
+### 自动有序列表编号
+
+如果在同一个段落的多个条目里，编号值不是顺序的，系统也会自动纠正成顺序的数字编号，并以第一个条目的编号值做为起始值
+
+#### 示例：
+多种写法，效果相同
+```markdown
+1. 条目一 
+1. 条目二 
+3. 条目三 
+```
+#### 效果
+
+1. 条目一 
+1. 条目二 
+3. 条目三 
+
+### 指定有序列表起始编号值
+
+在同一个段落的多个条目里，可以对第一个编号值指定数值大小，生成的文档将按照该值进行编号
+
+#### 示例：
+多种写法，效果相同
+```markdown
+5. 条目一 
+1. 条目二 
+3. 条目三 
+```
+#### 效果
+
+5. 条目一 
+1. 条目二 
+3. 条目三 
+
+### 嵌套有序列表
+
+通过间隔二个以上的空隔，可以实现多级嵌套有序列表功能。
+
+#### 示例：
+多种写法，效果相同
+```markdown
+1. 条目一 
+	1. 子条目一 
+	2. 子条目二 
+2. 条目二
+```
+#### 效果
+
+1. 条目一 
+	1. 子条目一 
+	2. 子条目二 
+2. 条目二
+
+### 多行与多段落
+
+与无序列表使用方法相同，不在赘述。
+
+### 列表和应用或代码块
+
+与无序列表使用方法相同，不在赘述
+
+
 ## X体
 
 ### 示例：
