修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -426,15 +426,69 @@ sit amet, consectetuer adipiscing elit.
 
 与无序列表使用方法相同，不在赘述
 
+## 引用
+
+### 单行引用
+
+在引用的文字前面添加符号 >。
+
+#### 示例：
+多种写法，效果相同
+```markdown
+> 这是一个单行引用 
+```
+#### 效果
+
+> 这是一个单行引用 
+
+### 多行引用
+
+多行引用可以只在第一行里使用 > 符号，只要是在同一个段落内，系统都会把该段落处理成引用。同时也可以在段落的每一个起始行里添加 > 符号。
+
+#### 示例：
+多种写法，效果相同
+```markdown
+1、每行都加，自动合并为一段
+> This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet, 
+> consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus. 
+> Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus. 
+>  
+> Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse 
+> id sem consectetuer libero luctus adipiscing. 
+2、只在首行加，相邻行自动合并为一段
+> This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet, 
+consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus. 
+Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus. 
+ 
+> Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse 
+id sem consectetuer libero luctus adipiscing. 
+```
+#### 效果
+
+> This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet, 
+> consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus. 
+> Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus. 
+>  
+> Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse 
+> id sem consectetuer libero luctus adipiscing. 
+
+
+> This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet, 
+consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus. 
+Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus. 
+ 
+> Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse 
+id sem consectetuer libero luctus adipiscing. 
+
 
 ## X体
 
-### 示例：
+#### 示例：
 多种写法，效果相同
 ```markdown
 
 ```
-### 效果
+#### 效果
 
 
 
