修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -465,6 +465,7 @@ id sem consectetuer libero luctus adipiscing.
 ```
 #### 效果
 
+1、
 > This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet, 
 > consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus. 
 > Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus. 
@@ -472,7 +473,7 @@ id sem consectetuer libero luctus adipiscing.
 > Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse 
 > id sem consectetuer libero luctus adipiscing. 
 
-
+2、
 > This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet, 
 consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus. 
 Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus. 
@@ -480,6 +481,105 @@ Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.
 > Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse 
 id sem consectetuer libero luctus adipiscing. 
 
+### 多级引用
+
+连继多个 > 符号，就可以实现多级引用。理论可以无限嵌套。
+
+#### 示例：
+多种写法，效果相同
+```markdown
+> 这是一个多级引用 
+> 一级引用 
+>> 二级引用 
+>>> 三级引用 
+```
+#### 效果
+
+> 这是一个多级引用 
+> 一级引用 
+>> 二级引用 
+>>> 三级引用 
+
+### 引用与其他语法同时使用
+
+理论可以与所有语法同时使用，比影响它们的显示。
+
+#### 示例：
+多种写法，效果相同
+````markdown
+> ## 这是一个标题。 
+>  
+> 1.   这是第一行列表项。 
+> 2.   这是第二行列表项。 
+>[链接测试](https://lonlypan.com)
+>![小书匠图片](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png) 
+> ```c 
+> a=10; 
+> ```
+````
+#### 效果
+
+> ## 这是一个标题。 
+>  
+> 1.   这是第一行列表项。 
+> 2.   这是第二行列表项。 
+>[链接](https://lonlypan.com/category/)
+>![小书匠图片](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png) 
+> ```c 
+> a=10; 
+> ```
+
+
+## 段落
+
+一个 Markdown 段落是由一个或多个连续的文本行组成，它的前后要有一个以上的空行（空行的定义是显示上看起来像是空的，便会被视为空行。比方说，若某一行只包含空格和制表符，则该行也会被视为空行）。**普通段落不该用空格或制表符来缩进。**
+
+如果先强制换行的话，再前一行句尾处键入两个以上的空格然后回车。
+
+#### 示例：
+多种写法，效果相同
+```markdown
+段落一 
+ 
+段落二(行末有两个空格)  
+段落三
+```
+#### 效果
+
+段落一 
+ 
+段落二(行末有两个空格)  
+段落三c
+
+## 水平线
+
+在一行内，包含三个 (以上)-, * 或者_ 相同符号，就可以产生一个分隔线效果。需要注意的是连续三个 - 符号的上一行如果有文字，就会生产章节二号标题，想避免这种情形可以考虑使用连继三个 * 或者 _ 符号来做为分隔线，或者在连继三个 - 符号前后各空一行。
+
+你也可以在符号中间插入空格，不影响显示效果。
+
+#### 示例：
+多种写法，效果相同
+```markdown
+1、
+分隔线前 
+ 
+---- 
+分隔线后 
+2、
+分隔线前 
+* * * 
+分隔线后 
+3、
+线前 
+___ 
+分隔线后
+```
+#### 效果
+
+分隔线前 
+ 
+---
+分隔线后 
 
 ## X体
 
@@ -490,6 +590,27 @@ id sem consectetuer libero luctus adipiscing.
 ```
 #### 效果
 
+# 高级语法
+
+# 本地文档语法
+
+## pdf 打印强制分页
+
+小书匠编辑器对标准的分隔线语法进行了扩展，如果使用了 _ 符号进行分隔，在使用小书匠的 pdf 打印功能时，会隐藏该分隔线的显示效果，转而强制 pdf 进行分页。
+
+该功能默认支持，不需要任何语法扩展控制选项或者元数据控制开关。
+
+如果用户想取消该功能，可以自己通过自定义 css 样式，取消该 pdf 分页功能。
+
+### 原理
+小书匠单独对 _ 符号生成的分隔线做了特殊的 css 样式控制，当打印 pdf 时，就会被强制进行分页， 并隐藏该分隔线显示效果。
+
+ ```
+.xsj_underline{ 
+  page-break-after: always; 
+  visibility: hidden; 
+} 
+```
 
 
 只介绍基础用法，相同效果的多种用法或不同写法已酌情删减。
