--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -592,6 +592,103 @@ ___
 
 # 高级语法
 
+## 表格
+
+### 普通表格
+
+#### 示例：
+多种写法，效果相同
+```markdown
+First Header  | Second Header 
+------------- | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+```
+#### 效果
+
+First Header  | Second Header 
+------------- | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+
+### 普通表格内容对齐
+
+#### 示例：
+多种写法，效果相同
+```markdown
+1、单元格左对齐
+First Header  | Second Header 
+:------------ | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+2、单元格右对齐
+First Header  | Second Header 
+------------: | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+3、单元格居中对齐
+First Header  | Second Header 
+:-----------: | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+```
+#### 效果
+
+1、单元格左对齐
+First Header  | Second Header 
+:------------ | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+2、单元格右对齐
+First Header  | Second Header 
+------------: | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+3、单元格居中对齐
+First Header  | Second Header 
+:-----------: | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+
+
+行单元格合并
+
+First Header  | Second Header 
+------------- | ------------- 
+行合并的单元格  |  
+Content Cell  | Content Cell 
+ 
+另一种方式 
+ 
+First Header  | Second Header 
+------------- | ------------- 
+>  | 行合并的单元格 
+Content Cell  | Content Cell
+
+列单元格合并
+
+First Header  | Second Header 
+------------- | ------------- 
+合并的列单元格  | Content Cell 
+^ | Content Cell 
+
+表格标题
+
+First Header  | Second Header 
+------------- | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+[表格标题内容]
+
+多表格头
+
+表格头1  | 表格头1 
+表格头2  | 表格头2 
+------------- | ------------- 
+Content Cell  | Content Cell 
+Content Cell  | Content Cell 
+
+
 # 本地文档语法
 
 ## pdf 打印强制分页
