--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -688,6 +688,50 @@ Content Cell  | Content Cell
 Content Cell  | Content Cell 
 Content Cell  | Content Cell 
 
+## 上下标
+
+下角文字: H~2~O 
+上角文字: 29^th^ 
+
+## 缩写定义
+
+The HTML specification 
+is maintained by the W3C. 
+ 
+*[W3C]:  World Wide Web Consortium 
+
+## 定义
+
+苹果 
+: 一种水果 
+: 一种品牌，计算机，手持设备 
+桔子 
+: 一种水果 
+
+## mathjax
+
+`!$ \Gamma(z) = \int_0^\infty t^{z-1}e^{-t}dt\,. $` 
+
+
+```mathjax! 
+$$\Gamma(z) = \int_0^\infty t^{z-1}e^{-t}dt\,.$$ 
+``` 
+
+`!$\eqref{ref1}$` 
+ 
+```mathjax! 
+\begin{equation} 
+\int_0^\infty \frac{x^22}{e^x-1}\,dx = \frac{\pi^4}{15}\label{ref1} 
+\end{equation} 
+``` 
+ 
+`!$\eqref{ref1}$` 
+
+`!$(\frac{a}{x} )^2 $`
+
+`!$\left(\frac{a}{x} \right)^2 $`
+
+:wink:   :cry: :laughing: :yum: 
 
 # 本地文档语法
 
