修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -732,7 +732,39 @@ $$\Gamma(z) = \int_0^\infty t^{z-1}e^{-t}dt\,.$$
 `!$\left(\frac{a}{x} \right)^2 $`
 
 :wink:   :cry: :laughing: :yum: 
-
+:angry:  :blush:    :broken_heart:
+  :confused:
+  :question:
+  :frowning:
+  :heart:
+  :imp:
+  :innocent:
+  :joy:
+  :kissing:
+  :laughing:
+  :neutral_face:
+  :open_mouth:
+  :rage:
+  :smile:
+  :smiley:
+  :smiling_imp:
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
+  ::
 # 本地文档语法
 
 ## pdf 打印强制分页
