修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -748,12 +748,12 @@ $$\Gamma(z) = \int_0^\infty t^{z-1}e^{-t}dt\,.$$
   :smile:
   :smiley:
   :smiling_imp:
-  ::
-  ::
-  ::
-  ::
-  ::
-  ::
+  :sob:
+  :stuck_out_tongue:
+  :sunglasses:
+  :sweat:
+  :sweat_smile:
+  :unamused:
   ::
   ::
   ::
