修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -524,10 +524,11 @@ id sem consectetuer libero luctus adipiscing.
 > 1.   这是第一行列表项。 
 > 2.   这是第二行列表项。 
 >[链接](https://lonlypan.com/category/)
->![小书匠图片](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png) 
+(http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png) 
 > ```c 
 > a=10; 
 > ```
+> ![小书匠图片]
 
 
 ## 段落
@@ -581,15 +582,6 @@ ___
 ---
 分隔线后 
 
-## X体
-
-#### 示例：
-多种写法，效果相同
-```markdown
-
-```
-#### 效果
-
 # 高级语法
 
 ## 表格
@@ -611,87 +603,10 @@ First Header  | Second Header
 Content Cell  | Content Cell 
 Content Cell  | Content Cell 
 
-### 普通表格内容对齐
-
-#### 示例：
-多种写法，效果相同
-```markdown
-1、单元格左对齐
-First Header  | Second Header 
-:------------ | ------------- 
-Content Cell  | Content Cell 
-Content Cell  | Content Cell 
-2、单元格右对齐
-First Header  | Second Header 
-------------: | ------------- 
-Content Cell  | Content Cell 
-Content Cell  | Content Cell 
-3、单元格居中对齐
-First Header  | Second Header 
-:-----------: | ------------- 
-Content Cell  | Content Cell 
-Content Cell  | Content Cell 
-```
-#### 效果
-
-1、单元格左对齐
-First Header  | Second Header 
-:------------ | ------------- 
-Content Cell  | Content Cell 
-Content Cell  | Content Cell 
-2、单元格右对齐
-First Header  | Second Header 
-------------: | ------------- 
-Content Cell  | Content Cell 
-Content Cell  | Content Cell 
-3、单元格居中对齐
-First Header  | Second Header 
-:-----------: | ------------- 
-Content Cell  | Content Cell 
-Content Cell  | Content Cell 
-
-
-行单元格合并
-
-First Header  | Second Header 
-------------- | ------------- 
-行合并的单元格  |  
-Content Cell  | Content Cell 
- 
-另一种方式 
- 
-First Header  | Second Header 
-------------- | ------------- 
->  | 行合并的单元格 
-Content Cell  | Content Cell
-
-列单元格合并
-
-First Header  | Second Header 
-------------- | ------------- 
-合并的列单元格  | Content Cell 
-^ | Content Cell 
-
-表格标题
-
-First Header  | Second Header 
-------------- | ------------- 
-Content Cell  | Content Cell 
-Content Cell  | Content Cell 
-[表格标题内容]
-
-多表格头
-
-表格头1  | 表格头1 
-表格头2  | 表格头2 
-------------- | ------------- 
-Content Cell  | Content Cell 
-Content Cell  | Content Cell 
 
 ## 上下标
 
-下角文字: H~2~O 
-上角文字: 29^th^ 
+
 
 ## 缩写定义
 
@@ -710,61 +625,122 @@ is maintained by the W3C.
 
 ## mathjax
 
-`!$ \Gamma(z) = \int_0^\infty t^{z-1}e^{-t}dt\,. $` 
+## emoji表情
 
+大部份编辑器及markdown 博客平台都会 emoji 表情提供了支持，小书匠使用 markdown-it 的扩展 markdown-it-emoji 实现对emoji表情的支持。
 
-```mathjax! 
-$$\Gamma(z) = \int_0^\infty t^{z-1}e^{-t}dt\,.$$ 
-``` 
+### 示例
 
-`!$\eqref{ref1}$` 
+```markdown
+:wink:   
+:cry:    
+:laughing:    
+:yum: 
+:angry:  
+:blush:    
+:broken_heart:
+:confused:  
+:question:
+:frowning:
+:heart:
+:imp:
+:innocent:
+:joy:
+:kissing:
+:laughing:
+:neutral_face:
+:open_mouth:
+:rage:
+:smile:
+:smiley:
+:smiling_imp:
+:sob:
+:stuck_out_tongue:
+:sunglasses:
+:sweat:
+:sweat_smile:
+:unamused:
+```
+
+### 效果
+
+:wink:   
+:cry:    
+:laughing:    
+:yum: 
+:angry:  
+:blush:    
+:broken_heart:
+:confused:  
+:question:
+:frowning:
+:heart:
+:imp:
+:innocent:
+:joy:
+:kissing:
+:laughing:
+:neutral_face:
+:open_mouth:
+:rage:
+:smile:
+:smiley:
+:smiling_imp:
+:sob:
+:stuck_out_tongue:
+:sunglasses:
+:sweat:
+:sweat_smile:
+:unamused:
+
+居中
+
+->居中显示的文字<- 
+
+对齐
+:>居左显示的文字<- 
  
-```mathjax! 
-\begin{equation} 
-\int_0^\infty \frac{x^22}{e^x-1}\,dx = \frac{\pi^4}{15}\label{ref1} 
-\end{equation} 
-``` 
+->居右显示的文字<: 
  
-`!$\eqref{ref1}$` 
+:>两端对齐显示的文字<: 
+ 
+->居中显示的文字<- 
 
-`!$(\frac{a}{x} )^2 $`
+## 待办
+- [ ] 未完成项 
+- [x] 已完成项 
+- [X] 已完成项 
 
-`!$\left(\frac{a}{x} \right)^2 $`
+脚注
 
-:wink:   :cry: :laughing: :yum: 
-:angry:  :blush:    :broken_heart:
-  :confused:
-  :question:
-  :frowning:
-  :heart:
-  :imp:
-  :innocent:
-  :joy:
-  :kissing:
-  :laughing:
-  :neutral_face:
-  :open_mouth:
-  :rage:
-  :smile:
-  :smiley:
-  :smiling_imp:
-  :sob:
-  :stuck_out_tongue:
-  :sunglasses:
-  :sweat:
-  :sweat_smile:
-  :unamused:
-  ::
-  ::
-  ::
-  ::
-  ::
-  ::
-  ::
-  ::
-  ::
-  ::
-  ::
+正文内容[^1] 
+ 
+[^1]: 这是脚注定义. 
+
+
+正文内容^[脚注定义内容]
+
+这是一个使用了多行脚注内容的文章.[^longnote] 
+ 
+[^longnote]: 多行脚注定义 
+ 
+    注意前面要有空格 
+	在脚注里面定义数学公式 `!$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$` 
+    
+
+重复脚注引用 [^2] 
+另一个重复脚注引用 [^2] 
+ 
+[^2]: 脚注定义 
+
+
+![图片大小使用示例 =200x200](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png)
+
+![只指定宽度的图片大小使用示例 =200x](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png)
+
+![只指定高度的图片大小使用示例 =x100](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png)
+
+
 # 本地文档语法
 
 ## pdf 打印强制分页
