修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -664,14 +664,14 @@ is maintained by the W3C.
 
 ### 效果
 
-:wink:   
-:cry:    
-:laughing:    
-:yum: 
-:angry:  
-:blush:    
+:wink:
+:cry: 
+:laughing:
+:yum:
+:angry:
+:blush:
 :broken_heart:
-:confused:  
+:confused:
 :question:
 :frowning:
 :heart:
@@ -693,19 +693,6 @@ is maintained by the W3C.
 :sweat_smile:
 :unamused:
 
-居中
-
-->居中显示的文字<- 
-
-对齐
-:>居左显示的文字<- 
- 
-->居右显示的文字<: 
- 
-:>两端对齐显示的文字<: 
- 
-->居中显示的文字<- 
-
 ## 待办
 - [ ] 未完成项 
 - [x] 已完成项 
@@ -717,28 +704,19 @@ is maintained by the W3C.
  
 [^1]: 这是脚注定义. 
 
-
-正文内容^[脚注定义内容]
-
 这是一个使用了多行脚注内容的文章.[^longnote] 
  
 [^longnote]: 多行脚注定义 
  
     注意前面要有空格 
-	在脚注里面定义数学公式 `!$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$` 
+	在脚注里面定义公式
     
 
-重复脚注引用 [^2] 
+重复脚注引用 [^2]   
 另一个重复脚注引用 [^2] 
  
-[^2]: 脚注定义 
+[^2]: 重复脚注定义 
 
-
-![图片大小使用示例](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png)
-
-![只指定宽度的图片大小使用示例 =200x](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png)
-
-![只指定高度的图片大小使用示例 =x100](http://markdown.xiaoshujiang.com/img/avatar_d_white_bg_256x256.png)
 
 
 # 本地文档语法
