--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -5,14 +5,6 @@ data: 2019-11-23 16:23
 categories:  办公
 --- 
 
-[toc!?theme=gray&depth=4]
-
-# 已知不适配语法
-不适配是指：在小书匠软件上可以正常使用，但发布到该博客上无法正常显示，该博客基于Jekyll & Markdown。
-
-思维导图大纲
-小书匠专用代码块高级语法
-
 # 常用语法
 
 ## 斜体
@@ -610,8 +602,7 @@ Content Cell  | Content Cell
 
 ## 缩写定义
 
-The HTML specification 
-is maintained by the W3C. 
+The HTML specification is maintained by the W3C. 
  
 *[W3C]:  World Wide Web Consortium 
 
