修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -73,7 +73,7 @@ __加粗的文字__
 ## 标题
 
 ### 示例：
-多种写法，效果相同
+
 ```markdown
 # 这里是一号标题 
 ## 这里是二号标题 
@@ -88,10 +88,10 @@ __加粗的文字__
 
 ## HTML
 
-想要使用该语法，需要在设置>扩展语法 里把HTML选项打开。系统默认打开HTML语法功能。
+想要使用该语法，需要在设置>扩展语法 里把HTML选项打开。系统默认打开HTML语法功能，即使软件关闭，博客也支持。
 
 ### 示例：
-多种写法，效果相同
+
 ```markdown
 <div class="hey">Hello world</div> 
 ```
@@ -106,7 +106,6 @@ __加粗的文字__
 
 #### 示例
 
-多种写法，效果相同
 ```markdown
 这是一段`行内代码`，穿插再行内之间 
 ```
@@ -119,7 +118,6 @@ __加粗的文字__
 
 #### 示例
 
-多种写法，效果相同
 ```markdown
 	var x = 1; 
 	var y = 2; 
@@ -141,8 +139,6 @@ __加粗的文字__
 
 #### 示例
 
-多种写法，效果相同
-
 ````markdown
 ```c
 var a = "hello world";
@@ -151,7 +147,7 @@ var b = "good luck";
 ````
 
 #### 效果
-后面的 *c* 就是指定显示风格，也可留空
+后面的 ==c== 就是指定显示风格，也可留空
 ```c
 var a = "hello world";
 var b = "good luck";
