修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -170,7 +170,7 @@ var b = "good luck";
 
 ### 单级无序列表
 
-在每一个条目前面添加*, - 或者 + 符号，就可以实现无序列表
+在每一个条目前面添加=='\*'==, =='-'== 或者 =='+'== 符号，就可以实现无序列表
 
 #### 示例：
 多种写法，效果相同
@@ -197,7 +197,7 @@ var b = "good luck";
 通过间隔二个以上的空隔，可以实现多级嵌套无序列表功能。**‘+’ ‘-’ ‘\*’** 三种符号可混用，同样效果。
 
 #### 示例：
-多种写法，效果相同
+
 ```markdown
 + 无序条目 
 	+ 子无序条目 
@@ -340,7 +340,7 @@ sit amet, consectetuer adipiscing elit.
 直接在每个条目上进行数值编号
 
 #### 示例：
-多种写法，效果相同
+
 ```markdown
 1. 条目一 
 2. 条目二 
@@ -358,7 +358,7 @@ sit amet, consectetuer adipiscing elit.
 如果在同一个段落的多个条目里，编号值不是顺序的，系统也会自动纠正成顺序的数字编号，并以第一个条目的编号值做为起始值
 
 #### 示例：
-多种写法，效果相同
+
 ```markdown
 1. 条目一 
 1. 条目二 
@@ -375,7 +375,7 @@ sit amet, consectetuer adipiscing elit.
 在同一个段落的多个条目里，可以对第一个编号值指定数值大小，生成的文档将按照该值进行编号
 
 #### 示例：
-多种写法，效果相同
+
 ```markdown
 5. 条目一 
 1. 条目二 
@@ -392,7 +392,7 @@ sit amet, consectetuer adipiscing elit.
 通过间隔二个以上的空隔，可以实现多级嵌套有序列表功能。
 
 #### 示例：
-多种写法，效果相同
+
 ```markdown
 1. 条目一 
 	1. 子条目一 
@@ -421,7 +421,7 @@ sit amet, consectetuer adipiscing elit.
 在引用的文字前面添加符号 >。
 
 #### 示例：
-多种写法，效果相同
+
 ```markdown
 > 这是一个单行引用 
 ```
@@ -474,7 +474,7 @@ id sem consectetuer libero luctus adipiscing.
 连继多个 > 符号，就可以实现多级引用。理论可以无限嵌套。
 
 #### 示例：
-多种写法，效果相同
+
 ```markdown
 > 这是一个多级引用 
 > 一级引用 
@@ -493,7 +493,7 @@ id sem consectetuer libero luctus adipiscing.
 理论可以与所有语法同时使用，比影响它们的显示。
 
 #### 示例：
-多种写法，效果相同
+
 ````markdown
 > ## 这是一个标题。 
 >  
@@ -526,7 +526,7 @@ id sem consectetuer libero luctus adipiscing.
 如果先强制换行的话，再前一行句尾处键入两个以上的空格然后回车。
 
 #### 示例：
-多种写法，效果相同
+
 ```markdown
 段落一 
  
@@ -704,8 +704,6 @@ The HTML specification is maintained by the W3C.
  
 [^2]: 重复脚注定义 
 
-
-
 # 本地文档语法
 
 ## pdf 打印强制分页
@@ -726,20 +724,6 @@ The HTML specification is maintained by the W3C.
 } 
 ```
 
-
-只介绍基础用法，相同效果的多种用法或不同写法已酌情删减。
-___
-
-## 标题
-
-```markdown
-# 这是 H1 一级标题
-## 这是 H2 二级标题
-### 这是 H3 三级标题
-#### 这是 H4 四级标题
-##### 这是 H5 五级标题
-###### 这是 H6 六级标题
-```
 
 ### 示例
 
