--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -715,3 +715,7 @@ The HTML specification is maintained by the W3C.
 另一个重复脚注引用 [^2] 
  
 [^2]: 重复脚注定义 
+
+# 参考链接
+
+[小书匠官方文档手册](http://soft.xiaoshujiang.com/docs/)
