修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -9,7 +9,7 @@ categories:  办公
 
 ## 斜体
 
-对需要斜体的文字使用一个 * 或者 _ 符号包裹，系统就会转换成斜体显示效果
+对需要斜体的文字使用一个 '*' 或者 _ 符号包裹，系统就会转换成斜体显示效果
 
 ### 示例：
 多种写法，效果相同
@@ -715,6 +715,16 @@ The HTML specification is maintained by the W3C.
 另一个重复脚注引用 [^2] 
  
 [^2]: 重复脚注定义 
+
+# 博客文章书写注意事项
+
+## 图片
+
+使用图片时一定要压缩；图片一定要命名，符合图片内容。
+
+## 标记高亮
+
+小书匠的标记高亮语法不适用
 
 # 参考链接
 
