--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -9,7 +9,7 @@ categories:  办公
 
 ## 斜体
 
-对需要斜体的文字使用一个 '*' 或者 _ 符号包裹，系统就会转换成斜体显示效果
+对需要斜体的文字使用一个 '\*' 或者 '\_' 符号包裹，系统就会转换成斜体显示效果
 
 ### 示例：
 多种写法，效果相同
@@ -25,7 +25,7 @@ _斜体文字_
 
 ## 粗体
 
-对需要加粗的文字使用两个 * 或者 _ 符号包裹，系统就会转换成加粗显示效果
+对需要加粗的文字使用两个 '\*' 或者 '\_' 符号包裹，系统就会转换成加粗显示效果
 
 ### 示例：
 多种写法，效果相同
@@ -114,7 +114,7 @@ __加粗的文字__
 ## 代码
 
 ### 行内代码
-通过 \` 符号在文字间标识成行内代码
+通过 '\`' 符号在文字间标识成行内代码
 
 #### 示例
 
@@ -142,12 +142,12 @@ __加粗的文字__
 
 ### GFM 风格代码块语法
 
-通过连续\` 或者 ~ 三个以上的符号包裹的区间做为代码块，并可以指定需要高亮显示的语言。通过 GFM 风格显示的代码块，不再需要像普通代码块那样，每行都要空4个空格的要求。
+通过连续 '\`' 或者 '~' 三个以上的符号包裹的区间做为代码块，并可以指定需要高亮显示的语言。通过 GFM 风格显示的代码块，不再需要像普通代码块那样，每行都要空4个空格的要求。
 
 小书匠使用 [highlightjs](https://highlightjs.org/) 高亮语言插件，所以需要你的博客也安装了该插件，我的已经安装，但和小书匠软件的高亮特性不一样，可能规则不同。基本支持所有的编程语言。
 
-1.[highlightjs 官网](https://highlightjs.org/)
-2.[highlightjs 支持的高亮语言](https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html#language-names-and-aliases)
+1. [highlightjs 官网](https://highlightjs.org/)  
+2. [highlightjs 支持的高亮语言](https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html#language-names-and-aliases)
 
 #### 示例
 
@@ -159,7 +159,7 @@ var b = "good luck";
 ````
 
 #### 效果
-后面的 ==c== 就是指定显示风格，也可留空
+后面的 'c' 就是指定显示风格，也可留空
 ```c
 var a = "hello world";
 var b = "good luck";
@@ -182,7 +182,7 @@ var b = "good luck";
 
 ### 单级无序列表
 
-在每一个条目前面添加=='\*'==, =='-'== 或者 =='+'== 符号，就可以实现无序列表
+在每一个条目前面添加 '\*' , '-' 或者 '+' 符号，就可以实现无序列表
 
 #### 示例：
 多种写法，效果相同
@@ -206,7 +206,7 @@ var b = "good luck";
 * 无序条目 
 
 ### 多级嵌套无序列表
-通过间隔二个以上的空隔，可以实现多级嵌套无序列表功能。**‘+’ ‘-’ ‘\*’** 三种符号可混用，同样效果。
+通过间隔二个以上的空隔，可以实现多级嵌套无序列表功能。'+'、'-'、'\*' 三种符号可混用，同样效果。
 
 #### 示例：
 
@@ -310,7 +310,7 @@ sit amet, consectetuer adipiscing elit.
 
 ### 列表和引用
 
-如果要在列表项目内放进引用，那 > 就需要缩进两格
+如果要在列表项目内放进引用，那 '>' 就需要缩进两格
 
 #### 示例：
 
@@ -430,7 +430,7 @@ sit amet, consectetuer adipiscing elit.
 
 ### 单行引用
 
-在引用的文字前面添加符号 >。
+在引用的文字前面添加符号 '>'。
 
 #### 示例：
 
@@ -443,7 +443,7 @@ sit amet, consectetuer adipiscing elit.
 
 ### 多行引用
 
-多行引用可以只在第一行里使用 > 符号，只要是在同一个段落内，系统都会把该段落处理成引用。同时也可以在段落的每一个起始行里添加 > 符号。
+多行引用可以只在第一行里使用 '>' 符号，只要是在同一个段落内，系统都会把该段落处理成引用。同时也可以在段落的每一个起始行里添加 '>' 符号。
 
 #### 示例：
 多种写法，效果相同
@@ -483,7 +483,7 @@ id sem consectetuer libero luctus adipiscing.
 
 ### 多级引用
 
-连继多个 > 符号，就可以实现多级引用。理论可以无限嵌套。
+连继多个 '>' 符号，就可以实现多级引用。理论可以无限嵌套。
 
 #### 示例：
 
@@ -554,7 +554,7 @@ id sem consectetuer libero luctus adipiscing.
 
 ## 水平线
 
-在一行内，包含三个 (以上)-, * 或者_ 相同符号，就可以产生一个分隔线效果。需要注意的是连续三个 - 符号的上一行如果有文字，就会生产章节二号标题，想避免这种情形可以考虑使用连继三个 * 或者 _ 符号来做为分隔线，或者在连继三个 - 符号前后各空一行。
+在一行内，包含三个 (以上) '-', '\*' 或者_ 相同符号，就可以产生一个分隔线效果。需要注意的是连续三个 '-' 符号的上一行如果有文字，就会生产章节二号标题，想避免这种情形可以考虑使用连继三个 '\*' 或者 '\_' 符号来做为分隔线，或者在连继三个 '-' 符号前后各空一行。
 
 你也可以在符号中间插入空格，不影响显示效果。
 
