修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -718,6 +718,23 @@ The HTML specification is maintained by the W3C.
 
 # 博客文章书写注意事项
 
+## 小书匠软件配合问题
+
+由于博客系统需要每篇博客都需要加上时间，而自己又希望文章标题不带时间，显得冗长。
+另外图片会保存到GitHub上，但保存的路径由于文章名字有关，所以约定如下
+
+1. 新建博客，此时默认标题带时间参数，初步想好名字（首标题），保存博客
+2. 编写博客，期间若想更改文章名字，保留想法，不做实际改动
+3. 定稿
+4. 删除标题时间，修改标题名（后标题）（小书匠同步github有个小bug，就是你保存的文件名是首标题名，但后期若修改了标题名，文件名不变；但是图片保存的路径是和你的标题名实时相关的，每张图片的保存路径都和当前的标题相关，所以再编写时频繁改博客名，图片就可能会保存在多个文件夹内）
+5. 图片不得再添加修改，否则就会保存到一个新的文件夹里，与标题实时相关
+
+**效果**
+
+ - 博客系统认定的时间以首标题为准
+ - 图片保存路径与首标题有关
+ - 显示的标题跟随实际标题变动
+
 ## 图片
 
 使用图片时一定要压缩；图片一定要命名，符合图片内容。
@@ -725,6 +742,11 @@ The HTML specification is maintained by the W3C.
 ## 标记高亮
 
 小书匠的标记高亮语法不适用
+
+## 头数据
+
+* 头数据的时间时无效的，博客系统只认标题名内的时间
+* 头数据的标题为最终显示的标题
 
 # 参考链接
 
