修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -747,6 +747,20 @@ The HTML specification is maintained by the W3C.
 
 * 头数据的时间时无效的，博客系统只认标题名内的时间
 * 头数据的标题为最终显示的标题
+* 头数据标签要小写，目前有
+  * c&c++
+  * html&css
+  * arduino
+  * jekyll 
+  * cad
+  * stm
+  * atmel
+  * software
+  * hardware
+  * 写作
+  * 游戏
+  * 笔记
+
 
 # 参考链接
 
