修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -757,9 +757,9 @@ The HTML specification is maintained by the W3C.
   * atmel
   * software
   * hardware
-  * 写作
-  * 游戏
-  * 笔记
+  * 办公
+  * 读书笔记
+  * 随笔
 
 
 # 参考链接
