修改文件: _posts/2019-04-02-HTML&CSS-第1章-结构.md

--- a/_posts/2019-04-02-HTML&CSS-第1章-结构.md
+++ b/_posts/2019-04-02-HTML&CSS-第1章-结构.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "HTML&CSS-第1章-结构"
 date:   2019-04-03 11:12
-categories: HTML&CSS
+categories: html&css
 ---
 
 在生活中，我们每天都会面对各种各样的文档、报纸、医疗保单及商品目录等。  
