修改文件: _posts/2019-04-02-HTML&CSS-前言.md

--- a/_posts/2019-04-02-HTML&CSS-前言.md
+++ b/_posts/2019-04-02-HTML&CSS-前言.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "HTML&CSS-前言"
 date:   2019-04-02 11:12
-categories: HTML&CSS
+categories: html&css
 ---
 
 基于《HTML&CSS设计与构建网站》一书学习，按照文章目录结构，记录一些个人学习笔记和文章中的重要内容。
