修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -669,6 +669,8 @@ Term 2
 
 # mathjax
 
+待补充
+
 # emoji表情
 
 大部份编辑器及markdown 博客平台都会 emoji 表情提供了支持，小书匠使用 markdown-it 的扩展 markdown-it-emoji 实现对emoji表情的支持。
